fixed artwork collapse initialization bug

--- a/app/src/styles/styles.scss
+++ b/app/src/styles/styles.scss
@@ -78,3 +78,16 @@ hr {
   }
 }
 
+/* collapse animation */
+.collapse, .collapse.show {
+  display: block !important;
+  transition: all .25s ease-in-out;
+}
+.collapse {
+ opacity: 0;
+ height: 0;
+}
+.collapse.show {
+  opacity: 1;
+  height: 100%;
+}
